# site

./: README.md  astro.config.mjs  astro.config.ts  package.json  pnpm-lock.yaml
api/: Cargo.toml  wrangler.toml
api/src/: lib.rs
public/styles/: global.css
src/components/: Contact.tsx  ContactForm.tsx  Nav.astro  NavLink.astro  Search.tsx  SocialTags.astro
src/layouts/: Base.astro  Layout.astro  garden.astro  project.astro
src/pages/: 404.astro  about.astro  contact.astro  garden.astro  index.astro  manifest.json.ts  projects.astro  rss.xml.ts  search.astro
src/pages/garden/: astro.md  react.md  tailscale.md
src/pages/projects/: private-programming-network.md  staff-check-in.md
