[package]
authors = ["Gavin Daly <gavdaly@protonmail.com>"]
edition = "2018"
name = "api"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
serde_json = "1.0.67"
worker = "0.0.11"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.1", optional = true}
serde = "1.0.144"
uuid = {version = "1.1.2", features = ["std", "v4", "js"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
